<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.jxzhang.campushelper.ui.user.RegisterWithEmailActivity">

    <!-- Login Progress -->

    <ProgressBar
        android:id="@+id/regist_with_mail_progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/biz_icon_user"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/biz_icon_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/biz_icon_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_confirm_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/biz_icon_confirm_password"
                android:hint="@string/prompt_confirm_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/register_with_email_submit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            style="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/action_sign_up"
            android:textStyle="bold"
            android:background="@drawable/button_common"/>

        <TextView
            android:id="@+id/register_with_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:textColor="#999999"

            android:textSize="14sp"
            android:text="@string/regist_with_phone_text"/>
    </LinearLayout>


</FrameLayout>
