<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.jxzhang.campushelper.ui.user.RegisterWithPhoneActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/regist_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_phone_number"
                android:drawableStart="@drawable/biz_icon_signup_phone"
                android:inputType="phone"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_weight="0.62"
                android:layout_height="wrap_content"
                android:layout_width="0dp">

                <EditText
                    android:id="@+id/verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_verify_code"
                    android:drawableStart="@drawable/biz_icon_signup_verification_code"
                    android:inputType="text"
                    android:drawablePadding="10dp"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/get_verify_code"
                android:layout_weight="0.38"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#AAAAAA"
                android:background="@drawable/verify_code_text"
                android:text="@string/get_verify_code"/>

        </LinearLayout>


        <Button
            android:id="@+id/submit_regist_phone"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            style="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/action_sign_up"
            android:textStyle="bold"
            android:background="@drawable/button_common"/>

        <TextView
            android:id="@+id/register_with_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:textColor="#999999"
            android:textSize="14sp"
            android:text="@string/regist_with_email_text"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
