<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:contentDescription="@string/img_tag"
        android:src="@drawable/login_title_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <!-- Login Progress -->
        <LinearLayout
            android:id="@+id/progress_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="320dp" />

            <TextView
                android:id="@+id/login_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/is_landing"/>
        </LinearLayout>

        <!-- Login area -->
        <RelativeLayout
            android:id="@+id/login_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp">

            <LinearLayout
                android:id="@+id/login_input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_account"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/biz_icon_user"
                        android:inputType="number"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/biz_icon_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <!-- 登陆按钮 -->
            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_below="@id/login_input_area"
                android:layout_height="42dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_common"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/forget_password_and_register_area"
                android:layout_below="@id/login_button"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/forget_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="3dp"
                    android:text="@string/forget_password"
                    android:textColor="#999999" />

                <TextView
                    android:id="@+id/new_for_register_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="3dp"
                    android:textColor="#999999"
                    android:text="@string/new_for_register" />
            </RelativeLayout>

            <!-- 第三方登陆图标 -->
            <RelativeLayout
                android:id="@+id/third_party_login_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:id="@+id/qq_login_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="40dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_qq"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:contentDescription="@string/img_tag"
                        android:src="@drawable/login_icon_qq" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/tp_qq"
                        android:textColor="#666666"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/weixin_login_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_weixin"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:contentDescription="@string/img_tag"
                        android:src="@drawable/login_icon_weixin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/tp_weixin"
                        android:textColor="#666666"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weibo_login_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:contentDescription="@string/img_tag"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_sina"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:contentDescription="@string/img_tag"
                        android:src="@drawable/login_icon_weibo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/tp_weibo"
                        android:textColor="#666666"
                        android:textSize="12sp" />
                </LinearLayout>
            </RelativeLayout>

            <!-- 直接登陆 -->
            <RelativeLayout
                android:id="@+id/login_directly_area"
                android:layout_marginBottom="5dp"
                android:layout_above="@id/third_party_login_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_directly_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_directly"
                    android:textColor="#BBBBBB"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="12sp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_toStartOf="@id/login_directly_text"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@id/login_directly_text"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>


